# SfuTelegramBot

./: .gitignore  README.md  pyproject.toml  setup.cfg
_timetable_images/: .gitignore
locales/: sfu_telegram_bot.pot
locales/en/LC_MESSAGES/: base.po  sfu_telegram_bot.mo  sfu_telegram_bot.po
locales/ru/LC_MESSAGES/: base.po  sfu_telegram_bot.mo  sfu_telegram_bot.po
src/: __main__.py  config.py  database.py  validation.py
src/bot/: support.py  telegram.py
src/bot/app/: callbacks.py  keyboards.py
src/sfu_api/timetable/: cacher.py  common.py  img_generator.py  parser.py
src/sfu_telegram_bot/: __main__.py  config.py  database.py  validation.py
src/sfu_telegram_bot/bot/: support.py  telegram.py
src/sfu_telegram_bot/bot/app/: generate_image.py  keyboards.py
src/sfu_telegram_bot/parser/: timetable.py  usport.py
